[package]
name = "phy-channels"
version = "0.1.0"
authors = ["Iskandar Rizki <iskandar.rizki@bhinneka.com>"]
edition = "2018"

[lib]
name = "phy_channels"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
tokio-core = "0.1"
#tokio = "0.1"
thread-local-object = "0.1.0"
futures = "0.1"
slog = { git = "https://github.com/slog-rs/slog" }
slog-term = { git = "https://github.com/slog-rs/term" }
websocket = "0.20"
phoenix-channels = {git = "https://github.com/rizki96/phoenix-channels-rs"}
#phoenix-channels = "0.1.4"
#phoenix = {git = "https://github.com/laibulle/phoenix-rs"}

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
